--- a/docs/apzvalga/linchpin.tex
+++ b/docs/apzvalga/linchpin.tex
@@ -1,8 +1,8 @@
-Interneto grafo savybėmis naudojamasi ir straipsnyje \kclong{linchpins}. Čia aprašomas metodas kenksmingos programinės įrangos aptikimui remiantis interneto grafo topologine struktūra. Interneto svetainės yra ranguojamos naudojant PageRnka algoritmą. Taip aptinkamos svetainėsk urios yra svarbios kenksmingų svetainių struktūroje.
+Interneto grafo savybėmis naudojamasi ir straipsnyje \kclong{linchpins}. Čia aprašomas metodas kenksmingos programinės įrangos aptikimui remiantis interneto grafo topologine struktūra. Interneto svetainės yra ranguojamos naudojant PageRnka algoritmą. Taip aptinkamos svetainės kurios yra svarbios kenksmingų svetainių struktūroje.
 
 Kertinės svetainės straipsnyje \cite{linchpins} yra apibrėžiami kaip dedikuoti serveriai kurie yra būtini kenksmingų internetinių svetainių veikimui. Šie serveriai talpina svetaines, kurios pasiekiamos tik iš kenkėjiškų svetainių ir yra skirti valdyti įvairias kenksmingas veiklas nukreipiant naudotojų srautus. Šiuos tinklo ramsčius aptikti ir sustabdyti yra svarbu dėl vykdomo veiklos masto -- jie gyvuoja daug ilgiau nei įprastos kenksmingos svetainės, apdorojami dideli duomenų kiekiai, dėl to jų sustabdymas labiau sutrikdo žalingą veiklą. Sprendžiama šių ramsčių aptikimo problema.
 
-Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulinas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl nautotojus automatiškai nukrepia į tolimesnius puslapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
+Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulingas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl naudotojus automatiškai nukreipia į tolimesnius puslapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
 
 \ktufigure{images/linchpin.png}{10 cm}{Vartotojų srauto paskirstymo schema}
 
@@ -16,18 +16,18 @@ kur $R(u)$ yra PageRank įvertis svetainei $u$, $B_u$ yra aibė svetainių kurio
 \begin{equation}
     R(u) = (1 - d) + d \sum_{v \in B_u} \frac{R(v)}{N_v}
 \end{equation}
-slopinimo faktorius $d$ gali būti nustatomas betkokiam skaičiui tarp $0$ ir $1$. $d=0.85$ naudojama straipsnyje \cite{pagerank}
+slopinimo faktorius $d$ gali būti nustatomas bet kokiam skaičiui tarp $0$ ir $1$. $d=0.85$ naudojama straipsnyje \cite{pagerank}
 
  PageRank įvertis priklauso nuo kitų svetainių įverčio, dėl to naudojamas iteratyvinis metodas jo skaičiavimui. Rezultatai taip pat priklauso nuo pradinio, nulinės iteracijos, PageRank vertės nustatymo. Ji gali būti parenkama pagal ekspertinę nuomonę, jei siekiama gauti įprastinį rangavimą kuris tinkamas naudoti interneto paieškos varikliuose.  Iteratyvus algoritmas konverguoja greitai, 322 milijonų nuorodų duomenų rinkinys pasiekia gerą rezultatą per 52 iteracijas \cite{pagerank}.
 
- PageRank algoritmo rezultatas labai priklauso nuo nulinės iteracijos PageRank įverčių parinkimo \cite{linchpins}. Tuo pasinaudojant formuojami keli PageRank įverčiai. Vienas yra įprastinis įvertis, kai įvertis nustatomas į 1 nekenksmingoms svetainėms, į 0 visoms kitoms svetainėms \cite{linchpins}. Taip suranguojamos nekenksmingos svetainės. Šiuo atveju ramstinės kenksmingos svetinės turės itin žemą rangą, nes neegzistuos nuorodos iį nekenksmingų svetainių. Formuojant antrą PageRank įvertį vieneto reikšmės priskiriamos kenksmingoms svetainėms. Taip ramstinės svetainės gaus itin aukštą rangą \cite{linchpins}. Taip gaunamas rangas interneto tinkle ir kenksmingų svetainių tinkle. Skirtumas tarp rangų leidžia atpažinti ramstines svetaines, taip netiesiogiai pasinaudojant jų izoliuotumu nuo nekenksmingų svetainių interneto grafe.
+ PageRank algoritmo rezultatas labai priklauso nuo nulinės iteracijos PageRank įverčių parinkimo \cite{linchpins}. Tuo pasinaudojant formuojami keli PageRank įverčiai. Vienas yra įprastinis įvertis, kai įvertis nustatomas į 1 nekenksmingoms svetainėms, į 0 visoms kitoms svetainėms \cite{linchpins}. Taip suranguojamos nekenksmingos svetainės. Šiuo atveju ramstinės kenksmingos svetainės turės itin žemą rangą, nes neegzistuos nuorodos iį nekenksmingų svetainių. Formuojant antrą PageRank įvertį vieneto reikšmės priskiriamos kenksmingoms svetainėms. Taip ramstinės svetainės gaus itin aukštą rangą \cite{linchpins}. Taip gaunamas rangas interneto tinkle ir kenksmingų svetainių tinkle. Skirtumas tarp rangų leidžia atpažinti ramstines svetaines, taip netiesiogiai pasinaudojant jų izoliuotumu nuo nekenksmingų svetainių interneto grafe.
 
-Naudotas duomenų rinkinys suformuotas iš kelių šaltinių. Kenksmingos svetainės surinktos iš Microsoft suteikto duomenų rinkinio, \mq{WarningBird} projekto duomenų, \mq{Twitter} socialinio tinklo duomenų, \mq{Alexa} svetainių katalogo duomenų. Iš šių šaltinių surinkta apie 5.5 milijono svetainių URL, kurie buvo panaudoti tolimesniam interneto svetainių  riknimui naudojant paiešką internete \cite{linchpins}. Paieška vykdyta 7 mėnesius naudojant 20 virtualių mašinų \cite{linchpins}.
+Naudotas duomenų rinkinys suformuotas iš kelių šaltinių. Kenksmingos svetainės surinktos iš Microsoft suteikto duomenų rinkinio, \mq{WarningBird} projekto duomenų, \mq{Twitter} socialinio tinklo duomenų, \mq{Alexa} svetainių katalogo duomenų. Iš šių šaltinių surinkta apie 5.5 milijono svetainių URL, kurie buvo panaudoti tolimesniam interneto svetainių  rinkimui naudojant paiešką internete \cite{linchpins}. Paieška vykdyta 7 mėnesius naudojant 20 virtualių mašinų \cite{linchpins}.
 
 Duomenys kategorizuoti suformuojant svetainių klasterius ir juos peržiūrint. Keli klasteriai identifikuoti kaip nekenksmingos svetainės. Kenksmingos svetainės žymėtos jas tikrinant naudojant Microsoft Forefront kenksmingos programinės įrangos aptikimo įrankį \cite{linchpins}. Didelė dalis URL (78.51\%) nebuvo priskirti jokiai klasei, jiems klasė priskiriama tyrimo metu, identifikuojant kenksmingas svetaines.
 
-Nauodjant turimą duomenų rinkinį dalis žinomų ramstinių serverių yra naudojama kitų ramsčių aptikimui. Atsitiktinai parenkama dalis žinomų ramsčių (1\%, 5\%, 10\%, 50\%, 90\%) kurie bus naudojami kaip nulinė PageRank įverčio skaičiavimo iteracija, jiems kenksmingų svetainių formavimno žingsnyje nustatomas pradinis $R(u) = 1$, ir tikrinama kiek kitų žinomų ramsčių bus aptikta.
+Naudojant turimą duomenų rinkinį dalis žinomų ramstinių serverių yra naudojama kitų ramsčių aptikimui. Atsitiktinai parenkama dalis žinomų ramsčių (1\%, 5\%, 10\%, 50\%, 90\%) kurie bus naudojami kaip nulinė PageRank įverčio skaičiavimo iteracija, jiems kenksmingų svetainių formavimo žingsnyje nustatomas pradinis $R(u) = 1$, ir tikrinama kiek kitų žinomų ramsčių bus aptikta.
 
-Naudojant 5\% pradiniam apmokymui aptikta 48.59\% kitų ramstinių serverių. Tai reiškia kad įmanoma aptikti 7 kartus daugiau ramstinių serverių nei buvo panaudota apmokyti pradiniam modeliui. Šiuo atveju pirmojo tipo klaidos pasiekia 2.36\%. Tai yra atvejis pasiekęs didžiausią klaidą ir skirtumą tarp pradinio duomenų rinkinio dydžio ir aptiktų ramstinių serverių kiekio. Metodas gali būti taikomas iteravytiai, panaudojant dalį aptiktų ramstinių serverių kitų serverių radumui. Tai leidžia aptikti žymiai daugiau ramstinių serverių, tačiau klaidos vis dar yra pakankamai žemos, leidžiančios praktinį panaudojimą \cite{linchpins}.
+Naudojant 5\% pradiniam apmokymui aptikta 48.59\% kitų ramstinių serverių. Tai reiškia kad įmanoma aptikti 7 kartus daugiau ramstinių serverių nei buvo panaudota apmokyti pradiniam modeliui. Šiuo atveju pirmojo tipo klaidos pasiekia 2.36\%. Tai yra atvejis pasiekęs didžiausią klaidą ir skirtumą tarp pradinio duomenų rinkinio dydžio ir aptiktų ramstinių serverių kiekio. Metodas gali būti taikomas iteratyviai, panaudojant dalį aptiktų ramstinių serverių kitų serverių radimui. Tai leidžia aptikti žymiai daugiau ramstinių serverių, tačiau klaidos vis dar yra pakankamai žemos, leidžiančios praktinį panaudojimą \cite{linchpins}.
 
 Naudojant šį metodą pasinaudota interneto grafo topologija, naudoti papildomi duomenys - tai yra domeno informacija, svetaines talpinančių serverių duomenys \cite{linchpins}. Šie duomenys yra galimi naudoti dėl turimo kompiuterinių resursų kiekio -- duomenis rinko 7 mėnesius, naudota 20 įrenginių. Norint tai atlikti naudojant vieną kompiuterį prireiktų daugiau nei 10 metų, tai sukelia sunkumų formuojant tokį duomenų rinkinį.
