--- a/docs/apzvalga/taxonomy.tex
+++ b/docs/apzvalga/taxonomy.tex
@@ -1,4 +1,4 @@
-Straipsnyje \kclong{tax} analizuojami įvairūs metodai kuriais pasinaudojant apgaunami naudotojai, jie patenka į kenksmingus puslapius. Atakose naudotojas yra išksiriamas kaip silpniausia sistemos grandis \cite{tax}. Tai išskiriama ne tik dėl galimybės apgauti pateikiant klaidinančią informaciją, bet ir naudotojų turimų teisių, naudotojas gali prieiti prie visų sistemos resursų ir įdiegti bet kokią programinę įrangą, net jei ji yra kenksminga. Sistemos naudotoju stengiamasi pasinaudoti semantinėse atakose.
+Straipsnyje \kclong{tax} analizuojami įvairūs metodai kuriais pasinaudojant apgaunami naudotojai, jie patenka į kenksmingus puslapius. Atakose naudotojas yra išskiriamas kaip silpniausia sistemos grandis \cite{tax}. Tai išskiriama ne tik dėl galimybės apgauti pateikiant klaidinančią informaciją, bet ir naudotojų turimų teisių, naudotojas gali prieiti prie visų sistemos resursų ir įdiegti bet kokią programinę įrangą, net jei ji yra kenksminga. Sistemos naudotoju stengiamasi pasinaudoti semantinėse atakose.
 
 Straipsnyje išskiriamos semantinės atakos yra \cite{tax}:
 \begin{enumerate}
