--- a/docs/apzvalga/webcop.tex
+++ b/docs/apzvalga/webcop.tex
@@ -10,7 +10,7 @@ Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} metodas skirtas atpažinti ža
 
 Straipsnyje aprašoma žalingos programinės įrangos plitimo problema. Vienas iš būdų kaip į kompiuterius patenka  tokia programinė įranga yra kenksmingų vykdomųjų failų parsisiuntimas iš interneto svetainių. Kenkimo programų plitimą siekiama apriboti naudojant prevencines priemones. Siekiama identifikuoti svetaines platinančias kenksmingus failus ir neleisti naudotojams jas pasiekti, ar juos kitaip perspėti apie potencialiai pavojingą svetainę.
 
-Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines. Pavyzdžiui jei turima struktūra atitinkanti \ktufigref{images/kenksmingos_A_B.png} pav. tinklapius. Šiuo atveju tiklapiai A ir B nuorodas turi tik į kenksmingą programinę įrangą, dėl togalima laikyti, kad vartotojas negaus jokios naudos iš jų, tik bus skatinamas įsidiegti kenksmingą programinę įrangą. Taip pat, keliaujant interneto grafu nuo apačios, pradedant kenksminga programine įranga galima aptikit ją platinančias svetaines, ir jas taip pat pažymėti kaip kenksmingas.
+Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines. Pavyzdžiui jei turima struktūra atitinkanti \ktufigref{images/kenksmingos_A_B.png} pav. tinklapius. Šiuo atveju tinklapiai A ir B nuorodas turi tik į kenksmingą programinę įrangą, dėl to galima laikyti, kad vartotojas negaus jokios naudos iš jų, tik bus skatinamas įsidiegti kenksmingą programinę įrangą. Taip pat, keliaujant interneto grafu nuo apačios, pradedant kenksminga programine įranga galima aptikit ją platinančias svetaines, ir jas taip pat pažymėti kaip kenksmingas.
 
 \ktufigure{images/kenksmingos_A_B.png}{10 cm}{Pavyzdinė kenksmingos programinės įrangos platinimo svetainės struktūra}
 
@@ -21,7 +21,7 @@ WebCop sistemą WebCop modulis bei dvi duomenų bazės. Viena duomenų bazėje s
         \item Naujos, potencialiai žalingos, programinės įrangos aptikimas
     \end{enumerate}
 
-Pirmas žingsnis, platinimo svetainių atpažinimas vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos nuorodos atstumu nuo pavojingų svetainių esančios svetainės. Šie interneto puslapiai yra laikomi žalingos programinės įrangos katalogais. Naudotojų prieiga prie šių puslapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios dviejų nuorodų atstumu ir talpinančios nežinomas taikomasias programas identifikuojamos kaip potencialiai pavojingos, laikoma kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
+Pirmas žingsnis, platinimo svetainių atpažinimas vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos nuorodos atstumu nuo pavojingų svetainių esančios svetainės. Šie interneto puslapiai yra laikomi žalingos programinės įrangos katalogais. Naudotojų prieiga prie šių puslapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios dviejų nuorodų atstumu ir talpinančios nežinomas taikomąsias programas identifikuojamos kaip potencialiai pavojingos, laikoma kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
 
 WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrangos registrą bei interneto grafą. Interneto grafo duomenų rinkinys formuotas naudojant interneto paieškos variklio duomenis. Kenkėjišių programų registras kuriamas naudojantis Windows operacinės sistemos naudotojų teikiamais duomenimis.
 
@@ -38,4 +38,4 @@ WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrango
 
 Lentelėje \vref{tab:webcop_rezultatas} pateikiami straipsnyje atliktų matavimų rezultatai.
 
-Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu. Tai leidžia pasinaudoti interneto grafo struktūra, ne tik atskirų svetainių bei tinklapių sąvybėmis.
+Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu. Tai leidžia pasinaudoti interneto grafo struktūra, ne tik atskirų svetainių bei tinklapių savybėmis.
