--- a/docs/metodas/input.tex
+++ b/docs/metodas/input.tex
@@ -1,10 +1,10 @@
-Kuriama metodika tinklalapių klasifikavimui. Siekiamas galutinis rezultatas yra įrankis, kurio įvestis yra tinklalapio adresas, o rezultatas -- klasifikacija su jai priskirtu tikslumu. Tinklapio adresas (URL) yra pakankamas identifikuoti tinklalapius. Taip pat naudojantis juo galima pasiekti patį tinklapį, taip įrankiui paliekama galimybė pridėti papildomas sąvybes, tokias kaip tinklalapio turinio peržiūra.
+Kuriama metodika tinklalapių klasifikavimui. Siekiamas galutinis rezultatas yra įrankis, kurio įvestis yra tinklalapio adresas, o rezultatas -- klasifikacija su jai priskirtu tikslumu. Tinklapio adresas (URL) yra pakankamas identifikuoti tinklalapius. Taip pat naudojantis juo galima pasiekti patį tinklapį, taip įrankiui paliekama galimybė pridėti papildomas savybes, tokias kaip tinklalapio turinio peržiūra.
 
-Klasifikavimo modeliai savo bendroje formoje kaip įvestį naudoja parametrų vektorių, dažniausiai tai yra $n$ ilgio vektorius $X = (x_1, x_2, ... , x_n)$ žymintis klasifikuojamo objekto sąvybes. Sąvybės išreiškiamos skaitinėmis vertėmis. Klasifikatoriaus tikslas - kiekvienam vektoriui $X$ priskirti klasę $Y$. Dėl to vienas pirmų užduočių kuriuos reikia atlikti yra nagrinėjamo objekto, tinklalapio adreso, transformavimas į sąvybių vektorių $X$.
+Klasifikavimo modeliai savo bendroje formoje kaip įvestį naudoja parametrų vektorių, dažniausiai tai yra $n$ ilgio vektorius $X = (x_1, x_2, ... , x_n)$ žymintis klasifikuojamo objekto savybes. Savybės išreiškiamos skaitinėmis vertėmis. Klasifikatoriaus tikslas - kiekvienam vektoriui $X$ priskirti klasę $Y$. Dėl to vienas pirmų užduočių kuriuos reikia atlikti yra nagrinėjamo objekto, tinklalapio adreso, transformavimas į savybių vektorių $X$.
 
-\ktusection{Sąvybių vektoriaus $X$ formavimas}
+\ktusection{Savybių vektoriaus $X$ formavimas}
 
-Tinklalapio sąvybių vektorius $X$ gaunamas iš tinklalapio adreso bei svetainės PageRank įverčių. Tinklalapio adresas yra simbolių eilutė, naiviu atveju būtų galima jį traktuoti kaip skaičių masyvą, tačiau taip būtų prarandama daug informacijos. Visą tinklapio adresą atitinkantis vektorius $X$ yra sudarytas iš sąvybių:
+Tinklalapio savybių vektorius $X$ gaunamas iš tinklalapio adreso bei svetainės PageRank įverčių. Tinklalapio adresas yra simbolių eilutė, naiviu atveju būtų galima jį traktuoti kaip skaičių masyvą, tačiau taip būtų prarandama daug informacijos. Visą tinklapio adresą atitinkantis vektorius $X$ yra sudarytas iš savybių:
 \begin{enumerate}
 \item srities varde esantys žodžiai;
 \item užklausoje esantys žodžiai;
@@ -36,7 +36,7 @@ ir tarpo simbolis);
 \item kenksmingų svetainių PageRank įvertis;
 \item nekenksmingų svetainių PageRank įvertis.
 \end{enumerate}.
-Dėl žodžių naudojimo sąvybių vektoriuje jo ilgis priklauso nuo naudojamo duomenų rinkinio. Kiekvienam žodžiui rinkinyje naudojama po vieną lauką vektoriuje, dėl to jis gali tapti ganėtinai ilgas.
+Dėl žodžių naudojimo savybių vektoriuje jo ilgis priklauso nuo naudojamo duomenų rinkinio. Kiekvienam žodžiui rinkinyje naudojama po vieną lauką vektoriuje, dėl to jis gali tapti ganėtinai ilgas.
 
 \ktufigure{images/url_struktura.png}{15 cm}{Tinklalapio adreso (URL) struktūra}
 
@@ -54,7 +54,7 @@ Išskiriamos sąvybės iš tinklalapio adreso yra:
 Pagerank įverčiai gaunami iš orientuoto svetainių grafo $G = (V, E)$, kur $V$ yra šio grafo viršūnės o $E$ lankai. Grafo formavimas iš interneto svetainių yra pavaizduotas \ktufigref{images/hostgraph.png} paveiksle.
 \ktufigure{images/hostgraph.png}{15 cm}{Svetainių grafo formavimas iš svetainių}
 
-Grafo viršūnės $V$ yra svetainės, o lankai atitinka ryšius tarp svetainių. Tai yra nuorodos tarp svetainių aptinkamos svetainių tinklalapiuose. Šie lankai turi kryptį. Jei svetainės $v_a$ tinklalapyje yra nuoroda į svetainės $v_b$ tinklalapį laikoma, kad egzistuoja lankas $e_{ab}$ iš viršūnės $v_a$ į viršūnę $v_b$. Visų lankų svoris yra vienodas, tai yra jei keli svetainės $v_a$ tinklalapiai turi nuorodas į svetainės $v_b$ tinklalapius, visvien laikoma kad yra tik vienas lankas $e_{ab}$. Galimi abipusiai svetainių ryšiai, tai yra jei egzistuoja lankas $e_{ab}$ lankas $e_{ba}$, kuris rodo ryšį iš viršūnės $v_b$ į viršūnę $v_a$ taip pat gali egzistuoti.
+Grafo viršūnės $V$ yra svetainės, o lankai atitinka ryšius tarp svetainių. Tai yra nuorodos tarp svetainių aptinkamos svetainių tinklalapiuose. Šie lankai turi kryptį. Jei svetainės $v_a$ tinklalapyje yra nuoroda į svetainės $v_b$ tinklalapį laikoma, kad egzistuoja lankas $e_{ab}$ iš viršūnės $v_a$ į viršūnę $v_b$. Visų lankų svoris yra vienodas, tai yra jei keli svetainės $v_a$ tinklalapiai turi nuorodas į svetainės $v_b$ tinklalapius, vis vien laikoma kad yra tik vienas lankas $e_{ab}$. Galimi abipusiai svetainių ryšiai, tai yra jei egzistuoja lankas $e_{ab}$ lankas $e_{ba}$, kuris rodo ryšį iš viršūnės $v_b$ į viršūnę $v_a$ taip pat gali egzistuoti.
 
 Svetainių grafas naudojamas skaičiuoti Pagerank įverčiams. Pagerank įvertis apibrėžiamas kaip \cite{pagerank}:
 \begin{equation} \label{eq:pagerank}
@@ -78,7 +78,7 @@ PageRank įvertis negali būti tiesiogiai apskaičiuojamas pagal \ref{eq:pageran
 \Until{$\delta < e$}
 \end{ktualgo}
 
-Šis būdas apskaičiuoti PageRank priklauso nuo nuo kelių parametrų \vref{tab:pagerank_params}. Tai yra $S$, nulinės iteracijos įvertis. Šios iteracijos metu nustatytos reikšmės bus naudojamos tolimesnių viršūnių įverčiui rasti. Nustatant šį vektorių galima koreguoti kurios viršūnės yra svarbios skaičiavimų pradžioje. Šio vektoriaus keitimas leidžia personalizuoti PageRank įverčio rezultatą. Patametras $d$ yra slopinimas, nuo jo priklauso metodo konvergavimo greitis. Viskas vykdoma kol pasiekiamas pasirinktas konvergavimo lygmuo, kurį galima aptikti pagal tai, jog iteruojant įvertis kinta nežymiai. Minimali iteracijos įverčio pakitimo riba nustatoma kintamuoju $e$.
+Šis būdas apskaičiuoti PageRank priklauso nuo nuo kelių parametrų \vref{tab:pagerank_params}. Tai yra $S$, nulinės iteracijos įvertis. Šios iteracijos metu nustatytos reikšmės bus naudojamos tolimesnių viršūnių įverčiui rasti. Nustatant šį vektorių galima koreguoti kurios viršūnės yra svarbios skaičiavimų pradžioje. Šio vektoriaus keitimas leidžia pritaikyti PageRank įverčio rezultatą. Parametras $d$ yra slopinimas, nuo jo priklauso metodo konvergavimo greitis. Viskas vykdoma kol pasiekiamas pasirinktas konvergavimo lygmuo, kurį galima aptikti pagal tai, jog iteruojant įvertis kinta nežymiai. Minimali iteracijos įverčio pakitimo riba nustatoma kintamuoju $e$.
 
 \begin{ktutable}{pagerank_params}{Iteracinio PageRank įverčio skaičiavimo algoritmo parametrai}
     \begin{tabular}{ | r | l | }
