adding svm, ditching nn

--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -1,6 +1,6 @@
 \ktusection{Analizės išvados}
 
-Analizuojant egzistuojančią literatūrą aptikta, kad geri rezultatai klasifikuojant kenksmingas ir nekenksmingas svetaines yra pasiekiami naudojant įvairius metodus: C4.5 sprendimų medį \cite{trees}, atraminių vektorių mašinų \cite{comp}, siūlomi dirbtinių neuronų tinklai \cite{trees}. Šie metodai bus mėginami bandant išrinkti geriausiai tinkantį parinktam panaudos atvejui.
+Analizuojant egzistuojančią literatūrą aptikta, kad geri rezultatai klasifikuojant kenksmingas ir nekenksmingas svetaines yra pasiekiami naudojant įvairius metodus: C4.5 sprendimų medį \cite{trees}, atraminių vektorių mašinų \cite{comp}. Šie metodai bus mėginami bandant išrinkti geriausiai tinkantį parinktam panaudos atvejui.
 
 Duomenų rinkiniai yra formuojami jungiant įvairių juodųjų sąrašų duomenis bei naudojant privačius duomenų rinkinius kurie taip pat atitinka juoduosius sąrašus \cite{trees, comp, webcop}.
 
