--- a/docs/metodas/metodai.tex
+++ b/docs/metodas/metodai.tex
@@ -1,13 +1,12 @@
 \ktusection{Klasifikavimo modeliai}
 
-Lyginami trys skirtingi klasifikavimo modeliai:
+Lyginami du klasifikavimo modeliai:
 \begin{enumerate}
 \item C4.5 sprendimų medis
 \item atraminių vektorių mašinos
-\item dirbtinis neuronų tinklas
 \end{enumerate}
 
 \ktusubsection{C4.5 sprendimų medžio klasifikatorius}
 \input{metodas/medis.tex}
 \ktusubsection{Atraminių vektorių mašinų klasifikatorius}
-\input{metodas/vektoriai.tex}}
+\input{metodas/vektoriai.tex}
