--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -6,7 +6,7 @@ Duomenų rinkiniai yra formuojami jungiant įvairių juodųjų sąrašų duomeni
 
 Tinklalapių parametrai yra formuojami iš jų adresų (URL) \cite{trees, comp}. Interneto grafo struktūra naudojama straipsnyje \cite{linchpins} stengiantis identifikuoti klasterių centrus. Siūloma bandyti šią metriką pritaikyti ir klasifikavimo uždavinyje. Taip pat naudojami papildomi duomenys apie talpinančius serverius, įvairius svetainių metaduomenis, tačiau šie duomenys nėra viešai pasiekiami, ir jų surinkimui naudojami itin dideli skaičiavimo resursai -- \cite{linchpins} straipsnio atveju naudota 20 virtualių mašinų, renkančių duomenis 7 mėnesius. Dėl to naudojami tik URL bei svetainių grafo PageRank įverčiai.
 
-Modeliai formuojami naudojant įvairius metodus, tačiau dalinimas į mokymo, testavimo ir validavimo imtis yra paprastas ir tinkamas, turint pakankamai didelį duomenų rinkinį. Kryžminė validacija gali būti naudojant esant mažesniems rinkiniams \cite{trees}. Modeliai vertinami naudojant įvairias metrikas: tikslumas, validumo vertinimas naudojant AUC, tikslumą, specifiškumą, jautrumą.
+Modeliai formuojami naudojant įvairius metodus, tačiau dalinimas į mokymo, testavimo ir validavimo imtis yra paprastas ir tinkamas, turint pakankamai didelį duomenų rinkinį. Kryžminė validacija gali būti naudojant esant mažesniems rinkiniams \cite{trees}. Modeliai vertinami naudojant įvairias metrikas: tikslumą, validumo vertinimas naudojant AUC, specifiškumą, jautrumą.
 
 \newpage
 \ktusection{Darbo tikslas ir uždavinys}
