--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -59,6 +59,7 @@
 \ktuchapter{Medžiagos ir tyrimų metodai}
 \input{metodas/input.tex}
 \input{metodas/metodai.tex}
+\input{metodas/mokymas.tex}
 \newpage
 
 \ktuchapter{Tyrimų rezultatai ir aptarimas}
