--- a/docs/references.bib
+++ b/docs/references.bib
@@ -235,6 +235,35 @@ url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
   copyrightholder = {authors}
 }
 
+
+
+
+
+
+
+@article{roc,
+author = {J A Hanley and B J McNeil},
+title = {The meaning and use of the area under a receiver operating characteristic (ROC) curve.},
+journal = {Radiology},
+volume = {143},
+number = {1},
+pages = {29-36},
+year = {1982},
+doi = {10.1148/radiology.143.1.7063747},
+    note ={PMID: 7063747},
+
+URL = {
+        http://dx.doi.org/10.1148/radiology.143.1.7063747
+
+},
+eprint = {
+        http://dx.doi.org/10.1148/radiology.143.1.7063747
+
+}
+}
+
+
+
 @article{soceng,
 title = "An overview of social engineering malware: Trends, tactics, and implications ",
 journal = "Technology in Society ",
