--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -1,7 +1,7 @@
 \newcommand{\ktusubject}{Grafų ir tinklų klasterizavimo metodų palyginimas  nustatant klientų  rizikingas veiklas  pagal socialinių tinklų duomenis}
 \newcommand{\ktutitle}{Baigiamasis magistro projektas}
 \newcommand{\ktuyear}{2017}
-\newcommand{\ktudate}{\ktuyear-04-01}
+\newcommand{\ktudate}{\ktuyear-06-02}
 \newcommand{\ktucity}{Kaunas}
 \newcommand{\ktuinstitution}{Kauno technologijos universitetas}
 \newcommand{\ktufaculty}{Matematikos ir gamtos mokslų fakultetas}
@@ -21,6 +21,23 @@
 \usepackage{bm}
 
 \usepackage{ktua4}
+
+\setmainfont[
+    Path           = ./fonts/,
+    Extension      = .TTF,
+    Ligatures      = TeX,
+    BoldFont       = *bd,
+    ItalicFont     = *i,
+    BoldItalicFont = *bi
+]{Times}
+\setmonofont[
+    Path           = ./fonts/,
+    Extension      = .ttf,
+    Ligatures      = TeX,
+    BoldFont       = *bd,
+    ItalicFont     = *i,
+    BoldItalicFont = *bi
+]{cour}
 
 \usepackage{commath}
 
