--- a/docs/references.bib
+++ b/docs/references.bib
@@ -206,6 +206,18 @@ doi="10.1007/978-3-319-46298-1_30",
 url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
 }
 
+@misc{vw,
+    author = {Langford, John and Li, Lihong and Strehl, Alex},
+    citeulike-article-id = {9640840},
+    comment = {\url{http://hunch.net/\~{}vw}},
+    keywords = {cj-bib},
+    posted-at = {2011-08-11 01:40:23},
+    priority = {2},
+    title = {Vowpal {W}abbit},
+    year = {2007}
+}
+
+
 @article{ksvm,
   title={Fast kernel classifiers with online and active learning},
   author={Bordes, Antoine and Ertekin, Seyda and Weston, Jason and Bottou, L{\'e}on},
