--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -79,8 +79,8 @@
 \input{metodas/mokymas.tex}
 \newpage
 
-\ktuchapter{Tyrimų rezultatai ir aptarimas}
-\newpage
+\ktuchapter{Metodo taikymas ir rezultatai}
+\input{taikymas/duomenys.tex}
 
 \ktuchapter{Išvados}
 \newpage
