--- a/docs/references.bib
+++ b/docs/references.bib
@@ -270,11 +270,8 @@ URL = {
 },
 eprint = {
         http://dx.doi.org/10.1148/radiology.143.1.7063747
-
 }
 }
-
-
 
 @article{soceng,
 title = "An overview of social engineering malware: Trends, tactics, and implications ",
@@ -288,4 +285,38 @@ issn = "0160-791X",
 doi = "http://doi.org/10.1016/j.techsoc.2010.07.001",
 url = "http://www.sciencedirect.com/science/article/pii/S0160791X10000497",
 author = "Sherly Abraham and InduShobha Chengalur-Smith"
+}
+
+@online{mal1,
+author = {Joxean Koret},
+title = {Malware URLs},
+date = {2014},
+url = "http://malwareurls.joxeankoret.com/"
+}
+
+@online{mal2,
+author = {www.malwaredomainlist.com},
+title = {Malware Domain List},
+date = {2009},
+url = "https://www.malwaredomainlist.com/"
+}
+
+@online{mal3,
+author = {PhishTank},
+title = "PhisTank | Join the fight against phishing",
+date = "2017",
+url = "http://www.phishtank.com/"
+}
+
+@online{mal4,
+author = {malwaredomains@gmail.com},
+title = "Malware prevention through DNS Redirection",
+url = "http://malware-domains.com/"
+}
+
+@online{webgraph,
+author = {Meusel, Robert and Lehmberg, Oliver and Bizer, Christian and Vigna, Sebastiano},
+title = "Web Data Commons - Hyperlink Graphs",
+date = "2017",
+url = "http://webdatacommons.org/hyperlinkgraph/index.html"
 }
