--- a/docs/references.bib
+++ b/docs/references.bib
@@ -320,3 +320,25 @@ title = "Web Data Commons - Hyperlink Graphs",
 date = "2017",
 url = "http://webdatacommons.org/hyperlinkgraph/index.html"
 }
+
+@inproceedings{boldi2004webgraph,
+  title={The webgraph framework I: compression techniques},
+  author={Boldi, Paolo and Vigna, Sebastiano},
+  booktitle={Proceedings of the 13th international conference on World Wide Web},
+  pages={595--602},
+  year={2004},
+  organization={ACM}
+}
+
+@article{parallel,
+ title = {GNU Parallel - The Command-Line Power Tool},
+ author = {O. Tange},
+ address = {Frederiksberg, Denmark},
+ journal = {;login: The USENIX Magazine},
+ month = {Feb},
+ number = {1},
+ volume = {36},
+ url = {http://www.gnu.org/s/parallel},
+ year = {2011},
+ pages = {42-47}
+}
