--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -110,7 +110,7 @@
   \inputminted[linenos=true,baselinestretch=1,samepage=false,frame=leftline]{#2}{#1}
 }
 \newcommand{\ktusrcr}[3]{
-  \ktusubsection{#1}\label{file:#1}
+  \label{file:#1}
   \inputminted[linenos=true,baselinestretch=1,samepage=false,frame=leftline]{#3}{#2}
 }
 \newcommand{\ktusrcrh}[4]{
