--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -92,6 +92,11 @@
 \newpage
 
 \begin{ktuappendices}
+\ktusection{Modelio mokymo duomenų paruošimo programos išeities kodas}
+\label{priedas:executor}
+\ktusrcr{UrlBuilder.scala}{apps/src/main/scala/andriusdap/orbweaver/executor/UrlBuilder.scala}{scala}
+\ktusrcr{Pagerank.scala}{apps/src/main/scala/andriusdap/orbweaver/executor/Pagerank.scala}{scala}
+\ktusrcr{App.scala}{apps/src/main/scala/andriusdap/orbweaver/executor/App.scala}{scala}
 
 \end{ktuappendices}
 
