--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -81,6 +81,7 @@
 
 \ktuchapter{Metodo taikymas ir rezultatai}
 \input{taikymas/duomenys.tex}
+\input{taikymas/mokymas.tex}
 
 \ktuchapter{Išvados}
 \newpage
