--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -82,6 +82,7 @@
 \ktuchapter{Metodo taikymas ir rezultatai}
 \input{taikymas/duomenys.tex}
 \input{taikymas/mokymas.tex}
+\input{taikymas/taikymas.tex}
 
 \ktuchapter{Išvados}
 \newpage
