--- a/docs/taikymas/mokymas.tex
+++ b/docs/taikymas/mokymas.tex
@@ -3,3 +3,62 @@
 Modelio apmokymas vykdomas programinės įrangos paketu Vowpal Wabbit \cite{vw}.
 
 \ktusubsection{Sprendimų medžio modelio apmokymas}
+
+%60k imtis, linear, --l2 1e-08 -b 31, runtime 6m
+%
+%Lambda = 0
+%Kernel = linear
+%Num support = 8221
+%Number of kernel evaluations = 0 Number of cache queries = 0
+%Total loss = 0
+%Done freeing model
+%Done freeing kernel params
+%Done with finish
+%ACC    0.86527   pred_thresh  0.500000
+%PPV    0.00000   pred_thresh  0.500000
+%NPV    0.86527   pred_thresh  0.500000
+%SEN    0.00000   pred_thresh  0.500000
+%SPC    1.00000   pred_thresh  0.500000
+%PRE    0.00000   pred_thresh  0.500000
+%REC    0.00000   pred_thresh  0.500000
+%PRF    0.00000   pred_thresh  0.500000
+%LFT    0.00000   pred_thresh  0.500000
+%SAR    0.66607   pred_thresh  0.500000 wacc  1.000000 wroc  1.000000 wrms  1.000000
+%
+%ACC    0.13473   freq_thresh  0.000000
+%PPV    0.13473   freq_thresh  0.000000
+%NPV    0.00000   freq_thresh  0.000000
+%SEN    1.00000   freq_thresh  0.000000
+%SPC    0.00000   freq_thresh  0.000000
+%PRE    0.13473   freq_thresh  0.000000
+%REC    1.00000   freq_thresh  0.000000
+%PRF    0.23746   freq_thresh  0.000000
+%LFT    1.00000   freq_thresh  0.000000
+%SAR    0.42256   freq_thresh  0.000000 wacc  1.000000 wroc  1.000000 wrms  1.000000
+%
+%ACC    0.13473   max_acc_thresh  0.000000
+%PPV    0.13473   max_acc_thresh  0.000000
+%NPV    0.00000   max_acc_thresh  0.000000
+%SEN    1.00000   max_acc_thresh  0.000000
+%SPC    0.00000   max_acc_thresh  0.000000
+%PRE    0.13473   max_acc_thresh  0.000000
+%REC    1.00000   max_acc_thresh  0.000000
+%PRF    0.23746   max_acc_thresh  0.000000
+%LFT    1.00000   max_acc_thresh  0.000000
+%SAR    0.42256   max_acc_thresh  0.000000 wacc  1.000000 wroc  1.000000 wrms  1.000000
+%
+%PRB    0.13473
+%Warning: There are more than 50000 ties in your prediction, using pessimistic ordering in Average Precision.
+%APR    0.07062
+%ROC    0.50000
+%R50    0.00031
+%RKL    90724
+%TOP1   0.00000
+%TOP10  0.00000
+%SLQ    0.53370 Bin_Width  0.010000
+%CXE   8999999999997488077981482897577656465333014215252573954519616480358124176326309577600924132162142208.00000
+%RMS    1.00000
+%CA1    0.05263 19_0.05_bins
+%CA2    1.00000 Bin_Size 100
+%371 - START_TIME
+%
