adding some shit about bad models

--- a/docs/metodas/vektoriai.tex
+++ b/docs/metodas/vektoriai.tex
@@ -42,7 +42,7 @@ Polinominis kernelis gali būti formuojamas naudojant \cite{vw}
 \begin{equation}
     K(u, v) = (1 + u \cdot v)^d
 \end{equation}
-radialinės bazės kernelsi išreiškiamas
+radialinės bazės kernelis išreiškiamas
 \begin{equation}
     K(u, v) = exp \big( - \frac{|| u - v ||^2}{2 \sigma ^ 2} \big)
 \end{equation}
